--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Страница про современные подходы к обучению">
+  <meta name="keywords" content="Кауфман, Оакли, обучение, мозг">
+  <meta name="author" content="Anastasia Lobacheva">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="vendor/normalize.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="page">
-    <section></section>
-    <section></section>
+    <header class="header"></header>
+    <main class="content"></main>
+      <section class="description"></section>
+      <section class="techniques"></section>
+      <section class="video"></section>
+      <section class="oakley"></section>
+      <section class="feynman"></section>
+      <section class="digits"></section>
+      <section class="khan"></section>
+      <section class="kaufman"></section>
+      <section class="resources"></section>
+    <footer class="footer"></footer>
   </div>
 </body>
 </html>
