--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -140,58 +140,58 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme_dark">
+          </li>
+          <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <a href="https://arzamas.academy" class="resources__link" target="_blank"><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a>
-          <a href="https://nplus1.ru" class="resources__link" target="_blank"><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a>
-          <a href="https://2020.strelka.com" class="resources__link" target="_blank"><img src="images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo"></a>
-          <a href="https://polka.academy" class="resources__link" target="_blank"><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a>
+          <li><a href="https://arzamas.academy" class="resources__link" target="_blank"><img src="images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a></li>
+          <li><a href="https://nplus1.ru" class="resources__link" target="_blank"><img src="images/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></li>
+          <li><a href="https://2020.strelka.com" class="resources__link" target="_blank"><img src="images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo"></a></li>
+          <li><a href="https://polka.academy" class="resources__link" target="_blank"><img src="images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
         </ul>
       </section>
     </main>
@@ -204,23 +204,23 @@
         <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
-            <a href="https://practicum.yandex.ru" class="footer__column-link" target="_blank">Главная</a>
-            <a href="#" class="footer__column-link" target="_blank">Концепция</a>
-            <a href="#" class="footer__column-link" target="_blank">Наставники</a>
+            <li><a href="https://practicum.yandex.ru" class="footer__column-link" target="_blank">Главная</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank">Концепция</a></li>
+            <li><a href="#" class="footer__column-link" target="_blank">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__column-links">
-            <a href="https://www.youtube.com" class="footer__column-link" target="_blank">
+          <li><a href="https://www.youtube.com" class="footer__column-link" target="_blank">
               <img src="images/youtube-icon.svg" alt="YouTube" class="footer__social-icon">YouTube
-            </a>
-            <a href="https://vk.com" class="footer__column-link" target="_blank">
+            </a></li>
+            <li><a href="https://vk.com" class="footer__column-link" target="_blank">
               <img src="images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте
-            </a>
-            <a href="https://www.tiktok.com/ru-RU/" class="footer__column-link" target="_blank">
+            </a></li>
+            <li><a href="https://www.tiktok.com/ru-RU/" class="footer__column-link" target="_blank">
               <img src="images/tiktok-icon.svg" alt="TikTok" class="footer__social-icon">TikTok
-            </a>
+            </a></li>
           </ul>
         </nav>
       </div>
